PaintJS is done ..

--- a/index.html
+++ b/index.html
@@ -25,15 +25,36 @@
         <button id="jsSave">Save</button>
       </div>
       <div class="controls_colors" id="jsColors">
-        <div class="controls_color" style="background-color:black"></div>
-        <div class="controls_color" style="background-color:white"></div>
-        <div class="controls_color" style="background-color:red"></div>
-        <div class="controls_color" style="background-color:orange"></div>
-        <div class="controls_color" style="background-color:green"></div>
-        <div class="controls_color" style="background-color:skyblue"></div>
-        <div class="controls_color" style="background-color:blue"></div>
-        <div class="controls_color" style="background-color:yellow"></div>
-        <div class="controls_color" style="background-color:purple"></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:black"
+        ></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:white"
+        ></div>
+        <div class="controls_color jscolor" style="background-color:red"></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:orange"
+        ></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:green"
+        ></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:skyblue"
+        ></div>
+        <div class="controls_color jscolor" style="background-color:blue"></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:yellow"
+        ></div>
+        <div
+          class="controls_color jscolor"
+          style="background-color:purple"
+        ></div>
       </div>
     </div>
     <script src="app.js"></script>
